<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/add_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_black"
        android:contentDescription="@string/next"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="16dp"
        android:paddingVertical="23dp"/>

    <TextView
        android:id="@+id/add_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_register"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="23dp"/>

    <View
        android:id="@+id/add_view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/add_txt_title"
        android:layout_marginTop="23dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp"
        app:layout_constraintTop_toBottomOf="@id/add_view_line"
        android:layout_marginTop="23dp">

        <LinearLayout
            android:id="@+id/add_btn_open_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/btn_rectangle">

            <TextView
                android:id="@+id/add_txt_open_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_event"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/add_txt_open_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_event_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="27dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_btn_closed_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_rectangle">

            <TextView
                android:id="@+id/add_txt_closed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed_event"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/add_txt_closed_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed_event_content"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="27dp"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>