<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/join_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow_black"
        android:contentDescription="@string/next"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="17dp"
        android:paddingVertical="23dp"/>

    <TextView
        android:id="@+id/join_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="23dp"/>

    <View
        android:id="@+id/join_view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/join_txt_title"
        android:layout_marginTop="23dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/join_view_line"
        android:orientation="vertical"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="19dp">

        <TextView
            android:id="@+id/join_txt_twit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_name"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/join_add_edit_twt_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_rectangle"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/join_txt_twit_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_id"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/join_add_edit_twt_id"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/btn_rectangle"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/join_btn_join"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/finish"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:elevation="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>