<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/gift_picture_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow_black"
        android:contentDescription="@string/next"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="17dp"
        android:paddingVertical="23dp"/>

    <TextView
        android:id="@+id/gift_picture_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_register"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="23dp"/>

    <View
        android:id="@+id/gift_picture_view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/gift_picture_txt_title"
        android:layout_marginTop="23dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/gift_picture_view_line"
        app:layout_constraintBottom_toTopOf="@id/gift_picture_btn_next"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gift_picture_txt_register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift_picture_title"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginStart="25dp"/>

        <TextView
            android:id="@+id/gift_picture_txt_register_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gift_picture_content"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginStart="25dp"/>

        <ImageView
            android:id="@+id/gift_picture_img_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="25dp"
            android:background="@drawable/btn_rectangle"/>

        <Button
            android:id="@+id/gift_picture_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rectangle"
            android:layout_marginHorizontal="25dp"
            android:text="@string/picture_register"
            />


    </LinearLayout>

    <Button
        android:id="@+id/gift_picture_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_rectangle"
        android:text="@string/next"/>

</androidx.constraintlayout.widget.ConstraintLayout>