<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/manage_select_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="@string/next"
        android:paddingVertical="23dp"
        android:paddingStart="17dp"
        android:src="@drawable/back_arrow_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/manage_select_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="23dp"
        android:text="@string/manage_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/manage_select_view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="23dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/manage_select_txt_title" />

    <Button
        android:id="@+id/manage_select_btn_donation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_donation"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:background="@drawable/btn_rectangle"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="23dp"
        app:layout_constraintTop_toBottomOf="@id/manage_select_view_line"
        android:textAlignment="textStart"
        android:padding="18dp"/>

    <Button
        android:id="@+id/manage_select_btn_participate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manage_participate"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:background="@drawable/btn_rectangle"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@id/manage_select_btn_donation"
        android:textAlignment="textStart"
        android:padding="18dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="55dp">

        <TextView
            android:id="@+id/manage_select_txt_code_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manage_code"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/manage_select_txt_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1111"
            android:textSize="14sp"
            android:textColor="@color/black"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>