<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/add_contetn_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back_arrow_black"
        android:contentDescription="@string/next"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="17dp"
        android:paddingVertical="23dp"/>

    <TextView
        android:id="@+id/add_content_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_register"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="23dp"/>

    <View
        android:id="@+id/add_content_view_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/add_content_txt_title"
        android:layout_marginTop="23dp"/>

    <TextView
        android:id="@+id/add_content_txt_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_content_title"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/add_content_view_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:id="@+id/add_content_edit_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/add_content_txt_content"
        app:layout_constraintBottom_toTopOf="@id/add_content_btn_next"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/btn_rectangle"
        android:hint="@string/add_content_hint"
        android:textSize="14sp"
        android:layout_marginBottom="5dp"
        android:gravity="top"
        android:textCursorDrawable="@color/black"
        android:textIsSelectable="true"
        android:autofillHints="no"
        android:scrollbars="vertical"/>

    <Button
        android:id="@+id/add_content_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_rectangle"
        android:text="@string/next"/>

</androidx.constraintlayout.widget.ConstraintLayout>